 - zap make-targets that are only relevant for core - thanks @wlmb for report

2.019102 2019-04-22
 - corrected MANIFEST so PGPLOT::Window has ppport.h in distro - thanks @eserte for report

2.019101 2019-04-21
 - fixed corrupted FITS files

2.019100 2019-04-21
 - change docs to remove $a and $b since that clashes with Perl sort vars
 - CI now measures test coverage for XS and C code
 - full transition to PDLA, up to date with legacy PDL master
 - fix PDL::Lite so it successfully exports working functions
 - range speedups by @d-lamb
 - compatibility with Perl's experimental bitwise feature
 - pdladoc improvements
 - fix borover and bandover with badvalues
 - fix XS stack-handling bug revealed by Perl 5.28 compiled with debugging
 - more portable tilde expansion

2.019000 
 - The 'thresh' options in fitwarp2d has been removed.
 - Multiple minor fixes, docs, cleanup, and changing
   things to point to github away from sf.net.

2.018000 2019-04-20
 - SF.net Bugs fixed:
   - 429 Alien::Proj4->load_projection_information parses PJ_sch parameters incorrectly
   - 432 Work around List::MoreUtils bug t/gd_oo_test.t started failing in testers.
   - 433 GSL SF errors kill perl and pdl2/perldl shell
   - 434 Missing indx type in heading list of conversions.
 - Build improvements:
   - Add requirements and better test diags for PDLA::IO::GD.
   - Apply patch so PDLA::Lite can be used more than once
     Thanks to Shawn Laffan for the patch.
   - Fix build on perl <= 5.14 by adding ExtUtils::ParseXS to
     CONFIGURE_REQUIRES.
   - Make coretarget generate parallelisable make deps Make
     "core" target be generated by separate function
   - Fixes for coming removal of . from @INC for PDLA build.
     Thanks to Todd Rinaldo for the first patch and raising the issue.
 - Various updates to the documentation.

2.017000 2019-04-20
 - Bugs fixed:
    - 379 Passing qsort an extra argument causes a segfault
    - 393 Tests may fail if perl is compiled with -Duselongdouble